[project]
name = "debugger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.2",
    "modal>=0.64.232",
    "tenacity>=9.0.0",
    "together>=1.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
